[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gloot/editor/inventory_editor_control.gd" type="Script" id=1]

[node name="InventoryEditorControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 300 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="PrototypesContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PrototypesContainer"]
margin_right = 510.0
margin_bottom = 14.0
text = "Prototypes"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PrototypesContainer"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PrototypesContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Filter:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/PrototypesContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/PrototypesContainer"]
margin_top = 46.0
margin_right = 510.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1

[node name="BtnAdd" type="Button" parent="VBoxContainer/HBoxContainer/PrototypesContainer"]
margin_top = 580.0
margin_right = 510.0
margin_bottom = 600.0
text = "Add"

[node name="ItemsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ItemsContainer"]
margin_right = 510.0
margin_bottom = 14.0
text = "Inventory Items"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ItemsContainer"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 24 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ItemsContainer/MarginContainer"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ItemsContainer"]
visible = false
margin_top = 46.0
margin_right = 510.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ItemsContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Filter:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/ItemsContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 510.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/ItemsContainer"]
margin_top = 46.0
margin_right = 510.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1

[node name="BtnRemove" type="Button" parent="VBoxContainer/HBoxContainer/ItemsContainer"]
margin_top = 580.0
margin_right = 510.0
margin_bottom = 600.0
text = "Remove"
